Added FlipView component (Carousel customized)

--- a/less/bootmetro/bootmetro.less
+++ b/less/bootmetro/bootmetro.less
@@ -84,6 +84,7 @@
 
 @import "progress-bars.less";
 @import "carousel.less";
+@import "flipview.less";
 @import "hero-unit.less";
 
 @import "tiles.less";
