--- a/templates/pages/index.mustache
+++ b/templates/pages/index.mustache
@@ -19,7 +19,7 @@
                </div>
                <div class="span5">
                   <!--<img id="hero-image" class="pull-right" width="500" height="265" src="content/img/hero4.png" alt="hero">-->
-                  <div id="myCarousel" class="carousel slide">
+                  <div id="myCarousel" class="carousel flipview slide">
                      <div class="carousel-inner">
                         <div class="item active">
                            <img src="content/img/bootstrap-mdo-sfmoma-01.jpg" alt="">
