--- a/content/css/bootmetro.css
+++ b/content/css/bootmetro.css
@@ -9857,6 +9857,37 @@ Progress control. */
   border-width: 2px;
 }
 
+.carousel.flipview .carousel-control {
+  left: 0;
+  display: none;
+  width: 60px;
+  height: 40px;
+  font-size: 20px;
+  line-height: 40px;
+  color: #000000;
+  background: rgba(255, 255, 255, 0.6);
+  border: 0;
+  -webkit-border-radius: 0;
+     -moz-border-radius: 0;
+          border-radius: 0;
+  opacity: 1;
+  filter: alpha(opacity=100);
+}
+
+.carousel.flipview .carousel-control.right {
+  right: 0;
+  left: auto;
+}
+
+.carousel.flipview .carousel-control:hover {
+  opacity: 0.9;
+  filter: alpha(opacity=90);
+}
+
+.carousel.flipview:hover .carousel-control {
+  display: block;
+}
+
 .hero-unit {
   -webkit-border-radius: 0;
      -moz-border-radius: 0;
