Fixed bordered tables. Added checkbox column to table demo.

--- a/content/css/bootmetro.css
+++ b/content/css/bootmetro.css
@@ -8780,6 +8780,59 @@ label.checkbox input[type=checkbox]:disabled ~ span.metro-checkbox::after {
   border-top: 0;
 }
 
+.table-bordered th,
+.table-bordered td {
+  border-top: 1px solid #cccccc;
+}
+
+.table-bordered thead:first-child tr:first-child th:first-child,
+.table-bordered tbody:first-child tr:first-child td:first-child {
+  -webkit-border-radius: 0;
+     -moz-border-radius: 0;
+          border-radius: 0;
+}
+
+.table-bordered thead:first-child tr:first-child th:last-child,
+.table-bordered tbody:first-child tr:first-child td:last-child {
+  -webkit-border-radius: 0;
+     -moz-border-radius: 0;
+          border-radius: 0;
+}
+
+.table-bordered thead:last-child tr:last-child th:first-child,
+.table-bordered tbody:last-child tr:last-child td:first-child,
+.table-bordered tfoot:last-child tr:last-child td:first-child {
+  -webkit-border-radius: 0;
+     -moz-border-radius: 0;
+          border-radius: 0;
+}
+
+.table-bordered thead:last-child tr:last-child th:last-child,
+.table-bordered tbody:last-child tr:last-child td:last-child,
+.table-bordered tfoot:last-child tr:last-child td:last-child {
+  -webkit-border-radius: 0;
+     -moz-border-radius: 0;
+          border-radius: 0;
+}
+
+.table-bordered caption + thead tr:first-child th:first-child,
+.table-bordered caption + tbody tr:first-child td:first-child,
+.table-bordered colgroup + thead tr:first-child th:first-child,
+.table-bordered colgroup + tbody tr:first-child td:first-child {
+  -webkit-border-radius: 0;
+     -moz-border-radius: 0;
+          border-radius: 0;
+}
+
+.table-bordered caption + thead tr:first-child th:last-child,
+.table-bordered caption + tbody tr:first-child td:last-child,
+.table-bordered colgroup + thead tr:first-child th:last-child,
+.table-bordered colgroup + tbody tr:first-child td:last-child {
+  -webkit-border-radius: 0;
+     -moz-border-radius: 0;
+          border-radius: 0;
+}
+
 .table tbody tr.success td {
   color: #ffffff;
   background-color: #01a31c;
@@ -8798,6 +8851,15 @@ label.checkbox input[type=checkbox]:disabled ~ span.metro-checkbox::after {
 .table tbody tr.info td {
   color: #ffffff;
   background-color: #2d89f0;
+}
+
+/* */
+
+table td label.radio,
+table td label.checkbox,
+table th label.radio,
+table th label.checkbox {
+  width: 24px;
 }
 
 /*
