--- a/templates/pages/index.mustache
+++ b/templates/pages/index.mustache
@@ -19,7 +19,7 @@
                </div>
                <div class="span5">
                   <!--<img id="hero-image" class="pull-right" width="500" height="265" src="content/img/hero4.png" alt="hero">-->
-                  <div id="myCarousel" class="carousel flipview slide">
+                  <div id="myFlipView" class="carousel flipview slide">
                      <div class="carousel-inner">
                         <div class="item active">
                            <img src="content/img/bootstrap-mdo-sfmoma-01.jpg" alt="">
@@ -31,8 +31,8 @@
                            <img src="content/img/bootstrap-mdo-sfmoma-03.jpg" alt="">
                         </div>
                      </div>
-                     <a class="left carousel-control" href="#myCarousel" data-slide="prev">&#xe0f4;</a>
-                     <a class="right carousel-control" href="#myCarousel" data-slide="next">&#xe0f1;</a>
+                     <a class="left carousel-control" href="#myFlipView" data-slide="prev">&#xe0f4;</a>
+                     <a class="right carousel-control" href="#myFlipView" data-slide="next">&#xe0f1;</a>
                   </div>
                </div>
             </div>
