--- a/less/bootmetro/variables.less
+++ b/less/bootmetro/variables.less
@@ -96,6 +96,7 @@
 @tableBackground:                   transparent; // overall background-color
 @tableBackgroundAccent:             #f9f9f9; // for striping
 @tableBackgroundHover:              #f5f5f5; // for hover
+@tableBorderHover:                  @light-blu1;
 @tableBorder:                       #ccc; // table and cell border
 
 // Buttons
