Refactored icomoon integration. Removed daterangepicker.

--- a/less/bootmetro/bootmetro.less
+++ b/less/bootmetro/bootmetro.less
@@ -28,7 +28,7 @@
 
 // Components: common
 //@import "../sprites.less";
-@import "icomoon.less"; // use icomoon icons
+//@import "icomoon.less"; // use icomoon icons
 
 @import "../dropdowns.less";
 @import "wells.less";
