--- a/less/bootmetro/dropdowns.less
+++ b/less/bootmetro/dropdowns.less
@@ -31,7 +31,7 @@ Dropdown submenu
 }
 .dropdown-menu li > a:hover,.dropdown-menu li > a:focus,.dropdown-submenu:hover > a {
    background-image: none;
-   filter: 0;
+   filter: none;
 }
 .btn-mini {
    .caret {
@@ -40,7 +40,7 @@ Dropdown submenu
 }
 .dropdown-menu .active > a,.dropdown-menu .active > a:hover {
    background-image: none;
-   filter: 0;
+   filter: none;
 }
 .btn {
    .caret {
