--- a/less/bootmetro/modals-popovers.less
+++ b/less/bootmetro/modals-popovers.less
@@ -6,6 +6,13 @@
    .no-box-shadow;
    .no-border-radius;
 }
+.modal {
+   .close:hover {
+      background-color: rgba(0, 0, 0, 0.4);
+      color: #FFF;
+      margin-top: 0;
+   }
+}
 .modal.warning.fade.in {
    top: 0;
 }
