--- a/templates/pages/metro-components.mustache
+++ b/templates/pages/metro-components.mustache
@@ -33,6 +33,7 @@
             <li><a href="#modals"><i class="icon-chevron-right"></i> {{_i}}Modal{{/i}}</a></li>
             <li><a href="#datepicker"><i class="icon-chevron-right"></i> {{_i}}DatePicker{{/i}}</a></li>
             <li><a href="#flipview"><i class="icon-chevron-right"></i> {{_i}}FlipView{{/i}}</a></li>
+            <li><a href="#toast"><i class="icon-chevron-right"></i> {{_i}}Toast Notifications{{/i}}</a></li>
          </ul>
       </div>
       <div class="span9">
@@ -325,6 +326,8 @@
 
 
 
+         <!-- DatePicker
+         ================================================== -->
          <section id="datepicker">
             <div class="page-header">
                <h1>{{_i}}DatePicker{{/i}} <small></small></h1>
@@ -365,6 +368,8 @@
 
 
 
+         <!-- FlipView
+         ================================================== -->
          <section id="flipview">
             <div class="page-header">
                <h1>{{_i}}FlipView{{/i}} <small></small></h1>
@@ -427,6 +432,94 @@
          </section>
 
 
+
+         <!-- Toast
+         ================================================== -->
+         <section id="toast">
+            <div class="page-header">
+               <h1>{{_i}}Toast Notifications{{/i}} <small></small></h1>
+            </div>
+            <blockquote>
+               A toast notification is a transient message to the user that contains relevant, time-sensitive information and provides quick access to related content in an app.
+               <small>Toast notification overview (Windows Store apps)</small>
+            </blockquote>
+            <p>Following there are all the possible templates and styles for different kind of toast notifications.</p>
+
+            <h2>{{_i}}Text only templates{{/i}}</h2>
+            <div class="bs-docs-example">
+
+               <div class="toast toasttext01">
+                  <button type="button" class="close" data-dismiss="alert"></button>
+                  <p>Body text that wraps over three lines. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula</p>
+               </div>
+
+               <div class="toast toasttext02">
+                  <button type="button" class="close" data-dismiss="alert"></button>
+                  <h4>Heading text</h4>
+                  <p>Body text that wraps over two lines. Vivamus elementum semper nisi.</p>
+               </div>
+
+               <div class="toast toasttext03">
+                  <button type="button" class="close" data-dismiss="alert"></button>
+                  <h4>Heading text that wraps over two lines. Vivamus elementum semper nisi.</h4>
+                  <p>Body text that wraps over two lines. Vivamus elementum semper nisi.</p>
+               </div>
+
+               <div class="toast toasttext04">
+                  <button type="button" class="close" data-dismiss="alert"></button>
+                  <h4>Heading text</h4>
+                  <p>Body text that wraps over two lines.</p>
+                  <p>Body text that wraps over two lines.</p>
+               </div>
+
+            </div>{{! /example }}
+
+<pre class="prettyprint linenums">
+&lt;div class="toast toasttext01"&gt;
+   &lt;button type="button" class="close" data-dismiss="alert"&gt;&lt;/button&gt;
+   &lt;p&gt;Body text that wraps over three lines. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula&lt;/p&gt;
+&lt;/div&gt;
+
+&lt;div class="toast toasttext02"&gt;
+   &lt;button type="button" class="close" data-dismiss="alert"&gt;&lt;/button&gt;
+   &lt;h4&gt;Heading text&lt;/h4&gt;
+   &lt;p&gt;Body text that wraps over two lines. Vivamus elementum semper nisi.&lt;/p&gt;
+&lt;/div&gt;
+
+&lt;div class="toast toasttext03"&gt;
+   &lt;button type="button" class="close" data-dismiss="alert"&gt;&lt;/button&gt;
+   &lt;h4&gt;Heading text that wraps over two lines. Vivamus elementum semper nisi.&lt;/h4&gt;
+   &lt;p&gt;Body text that wraps over two lines. Vivamus elementum semper nisi.&lt;/p&gt;
+&lt;/div&gt;
+
+&lt;div class="toast toasttext04"&gt;
+   &lt;button type="button" class="close" data-dismiss="alert"&gt;&lt;/button&gt;
+   &lt;h4&gt;Heading text&lt;/h4&gt;
+   &lt;p&gt;Body text that wraps over two lines.&lt;/p&gt;
+   &lt;p&gt;Body text that wraps over two lines.&lt;/p&gt;
+&lt;/div&gt;
+</pre>
+
+            <h2>{{_i}}Image & Text templates{{/i}}</h2>
+            <div class="bs-docs-example">
+
+               <div class="toast toastimageandtext01">
+                  <button type="button" class="close" data-dismiss="alert"></button>
+                  <img src="content/img/avatar-movie-puzzles-2.jpg" alt="" />
+                  <p>Body text that wraps over three lines. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula</p>
+               </div>
+
+
+            </div>{{! /example }}
+
+<pre class="prettyprint linenums">
+
+</pre>
+
+
+
+
+         </section>
 
       </div>
    </div>
