--- a/less/bootmetro/variables.less
+++ b/less/bootmetro/variables.less
@@ -164,6 +164,7 @@
 @zindexFixedNavbar:       1030;
 @zindexModalBackdrop:     1040;
 @zindexModal:             1050;
+@zindexNotification:      1060;
 
 
 // Sprite icons path
