--- a/templates/pages/hub.mustache
+++ b/templates/pages/hub.mustache
@@ -21,7 +21,7 @@
 
 <div class="container-fluid">
    <div class="row-fluid">
-      <div class="metro span12">
+      <div id="hub" class="metro span12">
          <div class="metro-sections">
 
             <div id="section1" class="metro-section tile-span-4">
