--- a/less/bootmetro/tiles.less
+++ b/less/bootmetro/tiles.less
@@ -630,3 +630,28 @@ article.tile-listviewitem-detail {
 
 }
 
+
+
+
+// PIVOT
+// ----------------
+#pivot {
+   position: relative;
+
+   .pivot-headers {
+      clear: both;
+      display: block;
+      height: 60px;
+      white-space: nowrap;
+   }
+   .pivot-items {
+      position: relative;
+
+      .pivot-item {
+         display: block;
+//         text-align: justify;
+         white-space: normal;
+         width: 100%;
+      }
+   }
+}
