--- a/templates/partials/header-menu.mustache
+++ b/templates/partials/header-menu.mustache
@@ -8,6 +8,7 @@
    <li><a href="./wizard.html">Wizard</a></li>
    <li><a href="./icons.html">Icons</a></li>
    <li><a href="./toast.html">Toast Notifications</a></li>
+   <li><a href="./pivot.html">Pivot</a></li>
    <li><a href="./metro-components.html">Metro Components</a></li>
    <li class="divider"></li>
    <li><a href="./scaffolding.html">Bootstrap Scaffolding</a></li>
