--- a/templates/pages/scaffolding.mustache
+++ b/templates/pages/scaffolding.mustache
@@ -15,7 +15,11 @@
             </div>
          </div>
       </div>
-      {{>loggeduser}}
+      <div id="top-info" class="span5 pull-right">
+         <a id="settings" class="pull-right" href="#">
+            <b class="icon-settings"></b>
+         </a>
+      </div>
    </div>
 </header>
 <div class="container">
