--- a/less/bootmetro/bootmetro.less
+++ b/less/bootmetro/bootmetro.less
@@ -88,5 +88,7 @@
 @import "hero-unit.less";
 
 @import "tiles.less";
+@import "pivot.less";
+@import "listviews.less";
 @import "charms.less";
 @import "wizard.less";
