--- a/less/bootmetro/variables.less
+++ b/less/bootmetro/variables.less
@@ -320,5 +320,8 @@
 
 
 
-// TILES
+// PIVOT
 // --------------------------------------------------
+@pivotHeadersColor: @gray;
+@pivotHeadersHoverColor: @grayDarker;
+@pivotHeadersActiveColor: @grayDarker;
