--- a/templates/pages/hub.mustache
+++ b/templates/pages/hub.mustache
@@ -137,17 +137,12 @@
 
             </div>
 
-
          </div>
-
-         <!-- <a id="tiles-scroll-prev" class="win-command carousel-control left" href="#metro-carousel" data-slide="prev">
-            <span class="win-commandimage win-commandring">&#xe05d;</span>
-         </a>
-         <a id="tiles-scroll-next"  class="win-command carousel-control right" href="#metro-carousel" data-slide="next">
-            <span class="win-commandimage win-commandring">&#xe059;</span>
-         </a> -->
-
       </div>
+
+      <a id="tiles-scroll-prev" href="#">&#xe05d;</a>
+      <a id="tiles-scroll-next" href="#">&#xe059;</a>
+
    </div>
 </div>
 
