Pivot documentation (basic)

--- a/content/css/bootmetro.css
+++ b/content/css/bootmetro.css
@@ -7825,6 +7825,7 @@ Progress control. */
   -webkit-border-radius: 50%;
      -moz-border-radius: 50%;
           border-radius: 50%;
+  outline: 0;
 }
 
 #tiles-scroll-next {
